add REFERENCE section
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/jquery@5170 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/JavaScript.pod
+++ b/lib/Jifty/Manual/JavaScript.pod
@@ -122,6 +122,11 @@ effect functions.
 
 =back
 
+=head1 REFERENCE
+
+L<http://www.slideshare.net/simon/jquery-in-15-minutes/>
+L<http://www.slideshare.net/simon/learning-jquery-in-30-minutes/>
+L<http://www.slideshare.net/remy.sharp/prototype-jquery-going-from-one-to-the-other/>
 
 =cut
 
