--- a/share/po/zh_cn.po
+++ b/share/po/zh_cn.po
@@ -32,7 +32,7 @@ msgstr ""
 "\n"
 "如果您不想重设密码，请忽略这封信\n"
 "\n"
-"若要重设密码，请点击以下链接:\n"
+"如果您要重设密码，请点击以下链接:\n"
 "\n"
 "%2\n"
 
@@ -50,7 +50,7 @@ msgstr ""
 "\n"
 "您（或自称是您的某人）在 %1 申请注册.\n"
 "\n"
-"请点击以下链接，以确认你的电子邮箱:\n"
+"请点击以下链接，以确认您的电子邮箱:\n"
 "\n"
 "%2\n"
 
@@ -218,7 +218,7 @@ msgstr "确实要删除吗?"
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/SendAccountConfirmation.pm:97
 msgid "Confirmation resent."
-msgstr ""
+msgstr "确认信件已重新发送"
 
 #: lib/Jifty/Plugin/AdminUI/View-not-yet.pm:213
 msgid "Create"
@@ -243,7 +243,7 @@ msgstr "删除"
 
 #: lib/Jifty/Action/Record/Delete.pm:76
 msgid "Deleted"
-msgstr "成功删除项目."
+msgstr "已删除"
 
 #:
 msgid "Dismiss"
@@ -292,7 +292,7 @@ msgstr ""
 
 #: lib/Jifty/Plugin/ErrorTemplates/View.pm:138 share/web/templates/dhandler:7
 msgid "Go back home..."
-msgstr "回到首页..."
+msgstr "回首页..."
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/Login.pm:34
 msgid "Hashed Password"
@@ -300,7 +300,7 @@ msgstr ""
 
 #: lib/Jifty/Plugin/ErrorTemplates/View.pm:44
 msgid "Head on back home"
-msgstr ""
+msgstr "回首页"
 
 #: lib/Jifty/I18N.pm:19 lib/Jifty/I18N.pm:23
 #. ('World')
@@ -310,7 +310,7 @@ msgstr "%1, 您好!"
 #: lib/Jifty/Plugin/SkeletonApp/View.pm:31 share/web/templates/_elements/sidebar:5
 #. ($u->$method()
 msgid "Hiya, %1."
-msgstr "您好，%1。"
+msgstr "您好, %1."
 
 #: lib/Jifty/Plugin/SkeletonApp/Dispatcher.pm:23
 msgid "Home"
@@ -318,7 +318,7 @@ msgstr "首页"
 
 #: lib/Jifty/Plugin/User/Mixin/Model/User.pm:30
 msgid "How should I display your name to other users?"
-msgstr "您在本系统的名字"
+msgstr "您在本系统中的名字?"
 
 #: lib/Jifty/Action.pm:1090
 msgid "I changed $field for you"
@@ -338,7 +338,7 @@ msgstr "该账号不存在."
 
 #: lib/Jifty/Plugin/User/Mixin/Model/User.pm:89
 msgid "It looks like somebody else is using that address. Is there a chance you have another account?"
-msgstr "已经有人使用了这个地址，会不会是因为您还有另外一个账号？"
+msgstr "已经有人使用了这个地址，或许您还有另外一个账号？"
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/Signup.pm:75
 msgid "It looks like you already have an account. Perhaps you want to <a href=\"/login\">log in</a> instead?"
@@ -350,7 +350,7 @@ msgstr "两次输入的密码不同. 再试一次？"
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/SendAccountConfirmation.pm:82
 msgid "It looks like you're already confirmed."
-msgstr "您已经确认过了."
+msgstr "您的账号已经通过验证了."
 
 #:
 msgid "Jifty Administrative Console"
@@ -362,7 +362,7 @@ msgstr "Jifty 在线开发文档"
 
 #:
 msgid "Jifty Pod Online"
-msgstr "Jifty 在线 POD 文件"
+msgstr "Jifty 在线 POD 文档"
 
 #: lib/Jifty/View/Declare/Helpers.pm:375 share/web/templates/_elements/wrapper:18
 msgid "Loading..."
@@ -423,7 +423,7 @@ msgstr "昵称"
 
 #: lib/Jifty/Plugin/Authentication/Password/View.pm:52
 msgid "No account yet? It's quick and easy. "
-msgstr "还没有账号？您可以方便快捷地注册. "
+msgstr "还没有账号？您可以很容易就注册一个. "
 
 #: lib/Jifty/Action/Record/Search.pm:130
 msgid "No field contains"
@@ -439,11 +439,11 @@ msgstr "没有可处理的请求"
 
 #:
 msgid "Online Documentation"
-msgstr "在线文件"
+msgstr "在线文档"
 
 #: lib/Jifty/Plugin/OnlineDocs/Dispatcher.pm:26
 msgid "Online docs"
-msgstr "在线文件"
+msgstr "在线文档"
 
 #: lib/Jifty/Plugin/AdminUI/View-not-yet.pm:134
 #. ($page, $collection->pager->last_page)
@@ -472,7 +472,7 @@ msgstr "权限不足"
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/ResetLostPassword.pm:66
 msgid "Please email us!"
-msgstr "请发邮件通知我们!"
+msgstr "请给我们发邮件!"
 
 #: lib/Jifty/Plugin/AdminUI/View-not-yet.pm:163
 msgid "Previous Page"
@@ -575,7 +575,7 @@ msgstr "字段格式错误."
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/SendAccountConfirmation.pm:71 lib/Jifty/Plugin/Authentication/Password/Action/SendPasswordReminder.pm:72 lib/Jifty/Plugin/Authentication/Password/Action/Signup.pm:70
 msgid "That doesn't look like an email address."
-msgstr "这不是合法的电子邮箱."
+msgstr "不是合法的电子邮箱."
 
 #: lib/Jifty/Action/Record.pm:249
 msgid "That doesn't look right, but I don't know why"
@@ -583,7 +583,7 @@ msgstr "字段内容错误."
 
 #: lib/Jifty/Action/Record.pm:181
 msgid "The passwords you typed didn't match each other"
-msgstr "两组密码不匹配."
+msgstr "密码不匹配."
 
 #: lib/Jifty/Web.pm:365
 msgid "There was an error completing the request.  Please try again later."
@@ -599,11 +599,11 @@ msgstr ""
 
 #: lib/Jifty/Plugin/AdminUI/View-not-yet.pm:419
 msgid "This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records."
-msgstr "您可利用此界面来管理数据库的内容. 请选择表格名称, 进行增删及编辑."
+msgstr "您可利用此界面来管理数据库的内容. 请选择表格名称, 进行增删或者编辑."
 
 #: lib/Jifty/Plugin/AdminUI/View-not-yet.pm:425
 msgid "To disable this administrative console, add \"AdminMode: 0\" under the \"framework:\" settings in the config file (etc/config.yml)."
-msgstr "如果想停用管理界面, 请在配置文件 (etc/config.yml) 的 \"framework:\" 配置项内加上 \"AdminMode: 0\" 即可."
+msgstr "如果想禁用管理界面, 请在配置文件 (etc/config.yml) 的 \"framework:\" 配置项内加上 \"AdminMode: 0\" 即可."
 
 #: lib/Jifty/Plugin/AdminUI/View-not-yet.pm:127
 msgid "Toggle search"
@@ -615,11 +615,11 @@ msgstr "重试"
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/Signup.pm:108
 msgid "Try again later. We're really, really sorry."
-msgstr "请稍后再试，抱歉."
+msgstr "请稍后再试，非常抱歉."
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/Signup.pm:53
 msgid "Type that again?"
-msgstr "请再输入一次"
+msgstr "再输入一次?"
 
 #: lib/Jifty/Action/Record/Update.pm:156
 msgid "Updated"
@@ -668,7 +668,7 @@ msgstr "欢迎光临您崭新的 Jifty 应用程序"
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/ResetLostPassword.pm:63
 msgid "You don't exist."
-msgstr "该帐号不存在."
+msgstr "该账号不存在."
 
 #: lib/Jifty/Plugin/ErrorTemplates/View.pm:130
 msgid "You got to a page that we don't think exists."
@@ -680,7 +680,7 @@ msgstr "抱歉, 此页面不存在, 系统已记录该错误."
 
 #: lib/Jifty/Plugin/Authentication/Password/Action/ConfirmEmail.pm:44
 msgid "You have already confirmed your account."
-msgstr "您已经确认过该账号了."
+msgstr "您的账号已经通过验证了."
 
 #: lib/Jifty/Plugin/Authentication/Password/View.pm:98
 msgid "You lost your password. A link to reset it will be sent to the following email address:"
