--- a/lib/Jifty/Manual/jQueryMigrationGuide.pod
+++ b/lib/Jifty/Manual/jQueryMigrationGuide.pod
@@ -5,22 +5,22 @@ jQueryMigrationGuide - How to migrate your code to use jQuery.
 =head1 Migrate your jifty app to jquery
 
 Application developers may start the migration by modifying
-C<config.yml>, set the C<ConfigFileVersion> to 4. If you did not write
+F<config.yml>, set the C<ConfigFileVersion> to 4. If you did not write
 any custom javascript code for your app, then its done. Everything
 should just work.
 
 If you did wrote some javascript code before, but you did not use any
-of those funcitons defined in C<jifty*.js>, C<prototype.js> or
-C<scriptaculous.js>, then you're still good to go.
+of those funcitons defined in F<jifty*.js>, F<prototype.js> or
+F<scriptaculous.js>, then you're still good to go.
 
 Otherwise, your code might need to be modified a little bit. Since
-both C<prototype.js> and C<scriptaculous.js> are removed by default,
+both F<prototype.js> and F<scriptaculous.js> are removed by default,
 one trivial choice is to simply bring them back. That is as easy as
-adding a C<Prototypism> plugin to your Jifty application.
+adding a B<Prototypism> plugin to your Jifty application.
 
 If you dislike the whole Prototypism like us, you can choose to
 re-write your code with jQuery. In the section L</"From Prototype
-to jQuery"> below, we provid some known pattern that can be applied to
+to jQuery"> below, we provide some known pattern that can be applied to
 rewrite prototypism code with jQuery, or with just normal javascript.
 
 If you hack Jifty internal, please make sure you've read the following
@@ -46,7 +46,7 @@ always make this alias with a closure to really localize it.
 
 =head1 Jifty API
 
-Jifty javascript libraries enbraced a major re-archtect after jQuery
+Jifty javascript libraries embraced a major re-architect after jQuery
 landed. Especially those internal functions to process form elements.
 
 The Prototype-based old way is to extend Form object and the
@@ -55,15 +55,15 @@ dangerous to name those functions under Form. Because loading
 Prototype library can destroy those Jifty functions.
 
 The new jQuery-fashioned way is to always extend internal functions
-under Jifty object. Form becomes Jifty.Form, Form.Element becomes
-Jifty.Form.Element, and so on. The detail list of these defined
-functions are given in the pod of Jifty::Manual::Javascript. Most of
+under Jifty object. C<Form becomes C<Jifty.Form>, C<Form.Element> becomes
+C<Jifty.Form.Element>, and so on. The detail list of these defined
+functions are given in L<Jifty::Manual::Javascript>. Most of
 those functions are internal functions that you probably should not
 use them directly.
 
 =head1 From Prototype to jQuery
 
-If you've ever write javascript code on your Jifty applications, and
+If you've ever written javascript code on your Jifty applications, and
 you'd like to remove PrototypeJS library, here are some dummy rules to
 re-write prototypejs-based javascript code with jQuery.
 
