Fix part about re-use of actions outside Jifty app by creating request and response just like Jifty::Test->web does.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5256 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -378,7 +378,10 @@ Otherwise, everything should work as expected.
 
     use Jifty::Everything;
     BEGIN { Jifty->new; }
-    
+
+    Jifty->web->request(Jifty::Request->new);
+    Jifty->web->response(Jifty::Response->new);
+
     use MyApp::Model::Foo;
     use MyApp::Action::FrobFoo;
 
