Update manifest, meta.yml, signature, changelog (if all goes well, this is the revision going onto CPAN)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5287 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/Changelog
+++ b/Changelog
@@ -647,6 +647,8 @@ PLUGIN
 
  * Add CurrentUser->oauth_token - sartak
 
+ * OAuth is now its own dist, Jifty-Plugin-OAuth - sartak
+
  * OAuth should set temporary_current_user, not current_user - sartak
 
  * OAuth: Better allow/deny notifications - sartak
