Typo. s/my/var/;
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5295 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/JavaScript.pod
+++ b/lib/Jifty/Manual/JavaScript.pod
@@ -32,7 +32,7 @@ difference. The return value is I<not> an Array, it's a jQuery
 object that acts likes a Enumerable object (but still, not one). If you
 really want a Array, you can do:
 
-   my array_of_message = jQuery("span.message").get()
+    var array_of_message = jQuery("span.message").get()
 
 For most cases, C<jQuery("#" + id).get(0)> can be a replacement pattern
 to C<$(id)>. Selecting elements with C<jQuery()> function always
