Manual::Cookbook: fixed a typo
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5351 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -442,7 +442,7 @@ Now, add your records. To create a relationship between a row the two tables:
   $left->load(1);
 
   my $right = MyApp::Model::RightTable->new;
-  $right->laod(1);
+  $right->load(1);
 
   my $link = MyApp::Model::LinkTable->new;
   $link->create(
