--- a/AUTHORS
+++ b/AUTHORS
@@ -37,3 +37,4 @@ Todd Chapman <todd@chaka.net>
 Jason May <jason.a.may@gmail.com>
 Stanislav Sinyagin <ssinyagin@k-open.com>
 Tomohiro Hosaka <bokutin@bokut.in>
+Kazuhiro Osawa <ko@yappo.ne.jp>
