(empty commit message)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5845 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/UsingCSSandJS.pod
+++ b/lib/Jifty/Manual/UsingCSSandJS.pod
@@ -37,9 +37,9 @@ definitions in a single request.
 =head2 Assembly of CSS definitions
 
 When Jifty assembles all CSS definitions (which is internally done
-inside L<Jifty::Web> by the method C<include_css>), a single file,
+inside L<Jifty::Web> by the method C<include_css>, a single file,
 C<main.css> is included into the generated HTML code of the current
-page. This file consists of a series of C<@import> directives that
+page. This file consists of a series of C<@include> directives that
 reference every single CSS file to get used.
 
 =head2 Expansion of CSS definitions
