* Added links to Authentication::Ldap and Authentication::CAS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6103 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/AccessControl.pod
+++ b/lib/Jifty/Manual/AccessControl.pod
@@ -200,6 +200,6 @@ returns the id of the current user or C<undef> if not logged in.
 
 =head1 SEE ALSO
 
-L<Jifty::CurrentUser>, L<Jifty::Record>, L<Jifty::RightsFrom>
+L<Jifty::CurrentUser>, L<Jifty::Record>, L<Jifty::RightsFrom>, L<Jifty::Plugin::Authentication::Ldap>, L<Jifty::Plugin::Authentication::CAS> 
 
 =cut
